--- a/FrontEnd/web/css/style.css
+++ b/FrontEnd/web/css/style.css
@@ -22,3 +22,10 @@
 .link-to-download {
     margin-top: 3%;
 }
+
+.timeline {
+    height: 40px;
+    white-space: nowrap;
+    overflow: scroll;
+    
+}
